@@ -95,6 +95,7 @@ All:
 wxMSW:
 
 - Fixed version script problems when using configure with cygwin/mingw32.
+- Use system default paper size for printing instead of A4
 
 2.7.2
 -----
